Fix crisis profile map overlaping event selection

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -991,6 +991,7 @@ body #dashboard-container #main-dashboard {
           flex-basis: 50%;
           height: 320px; }
           body #dashboard-container #main-dashboard #right-section #crisis-profile-container #report .map #crisis-profile-map {
+            z-index: 0;
             background-color: #aaa;
             width: 100%;
             height: 100%; }
