--- a/stylesheets/main-dashboard/_crisis-profile.scss
+++ b/stylesheets/main-dashboard/_crisis-profile.scss
@@ -87,6 +87,7 @@
             height: 320px;
 
             #crisis-profile-map {
+                z-index: 0;
                 background-color: #aaa;
                 width: 100%;
                 height: 100%;
